add photo field to user profile methods
